# Spam-Classifier

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
spam/data/: dataset.py  utils.py
spam/modeling/: model.py
spam/registry/: register.py
spam/training/: trainer.py
